Bug 368142 - Operations property dialog do not show source code
Summary: Operations property dialog do not show source code
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.19.2 (KDE Applications 16.04.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-02 09:11 UTC by Ralf Habacker
Modified: 2016-09-03 19:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.80 (KDE Applications 16.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-09-02 09:11:40 UTC
While working on bug 158739 it has been recognized  that umbrello do not show source code on opening operation property from tree view.


Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. change active language to python
3. import http://quickgit.kde.org/?p=umbrello.git&a=blob&h=1a7bf2781b04e3d1bc6549f1bddcf143f7a20139&f=test%2Fimport%2Fpython%2Ftypes.py&o=plain
4. In the tree view open properties of operation __init__() from class Types.

Actual Results:  
The displayed property page does not show the source code imported from the python file


Expected Results:  
The property page should show the source code of the related operation.


The source code is currently only shown by using the following workaround:
1. In the tree view open property dialog for class Types.
2. Select "operations" in the left side of the dialog.
3. Select operation __init__() in the top right widget
4. Select "source code" tag in the "Documentation" category.
Comment 1 Ralf Habacker 2016-09-02 11:08:33 UTC
Git commit e8126809c24240b36418d578dc7248d0495389e5 by Ralf Habacker.
Committed on 02/09/2016 at 10:35.
Pushed by habacker into branch 'master'.

Fix 'Operations property dialog do not show source code'.
FIXED-IN:2.20.80 (KDE Applications 16.11.80)

M  +24   -3    umbrello/dialogs/widgets/documentationwidget.cpp
M  +2    -0    umbrello/dialogs/widgets/documentationwidget.h

http://commits.kde.org/umbrello/e8126809c24240b36418d578dc7248d0495389e5
Comment 2 Ralf Habacker 2016-09-03 19:52:59 UTC
Git commit 6811456a28954ad5d77949f4b8e1f6bc985589f6 by Ralf Habacker.
Committed on 03/09/2016 at 19:50.
Pushed by habacker into branch 'master'.

KF5 compile fix.

Thanks to cfeck at kde.org for pointing out.

M  +5    -0    umbrello/dialogs/widgets/documentationwidget.cpp

http://commits.kde.org/umbrello/6811456a28954ad5d77949f4b8e1f6bc985589f6