Fix 'Operations property dialog do not show source code'.

BUG:368142
FIXED-IN:2.20.80 (KDE Applications 16.11.80)