umbrello/dialogs/widgets/documentationwidget.h
@@ -13,6 +13,7 @@
 
 #include <QWidget>
 
+class CodeTextEdit;
 class UMLObject;
 class UMLWidget;
 
@@ -34,6 +35,7 @@ public:
 protected:
     QGroupBox *m_box;
     KTextEdit *m_editField;
+    CodeTextEdit *m_codeEditField;
     UMLObject *m_object;
     UMLWidget *m_widget;
     void init(const QString &text);
